[package]
name = "vhdlparser"
version = "0.1.0"
authors = ["Anibal F Antonelli <anibal.anto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "libvhdlparser"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "binvhdlparser"
path = "src/bin.rs"